[gd_scene load_steps=2 format=3 uid="uid://bssd70bttxpap"]

[ext_resource type="Script" uid="uid://cvr2lf1kngouh" path="res://scripts/dropdown_led_offset.gd" id="1_3vb1m"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3vb1m")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 86.0
offset_bottom = 55.0

[node name="LedOffsetLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2

[node name="LedOffsetDropdown" type="OptionButton" parent="VBoxContainer"]
layout_mode = 2

[node name="CloseDialogButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close"

[node name="ResetAllOffsetsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Reset All"

[connection signal="item_selected" from="VBoxContainer/LedOffsetDropdown" to="." method="_on_led_offset_dropdown_item_selected"]
[connection signal="pressed" from="VBoxContainer/CloseDialogButton" to="." method="_on_close_dialog_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ResetAllOffsetsButton" to="." method="_on_reset_all_offsets_button_pressed"]
